--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@zxing/ngx-scanner": "^3.0.0",
     "angular2-qrscanner": "^1.0.7",
     "html5-qrcode": "^1.0.9",
+    "instascan": "^1.0.0",
+    "jquery": "^3.5.1",
     "ng2-qrcode-reader": "0.0.1",
     "qr-code-scanner": "^1.0.7",
     "rxjs": "~6.5.4",
@@ -33,9 +35,10 @@
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.38",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
